# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: gendiff-check.yml
fixtures/: file1.json
gendiff/: __init__.py  diff.py  formatter.py  generate_diff.py  main.py  parse.py  tree.py
gendiff/formatters/: compare.py  json_formatter.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py  generate_diff.py
hexlet_code/scripts/: gendiff.py
tests/: compare_test.py  diff_test.py  formate_test.py  parser_test.py  tree_test.py
tests/fixtures/: file2.yaml
