[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "script that shows the difference between 2 files"
authors = ["Gregtmj"]
readme = "README.md"
packages = [{include = "gendiff"}]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.scripts]
gendiff = "gendiff.main:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
